# Cryptopals

./: CMakeLists.txt  README.md  plan.md
ch1set1/c/: README.md  RUNME.sh  set1.c
ch1set1/go/: ch1set1.go
ch1set1/rust/: set1_test_cases.txt
ch1set1/rust/ch1set1/: Cargo.toml
ch1set1/rust/ch1set1/src/: main.rs
ch3set1/c/: RUNME.sh  ch3.c  ch3_chi_squared.c  ch3_index_of_coincidence.c  freq_table.c  index_of_coincidence.c
ch3set1/go/: ch3set1.go  ch3set1_chi_squared.go
ch3set1/rust/: Cargo.toml
ch3set1/rust/chi_squared_score/: RUNME.sh
ch3set1/rust/chi_squared_score/src/: main.rs
ch3set1/rust/src/: main.rs
ch4set1/c/: RUNME.sh  ch4.c  extract_no_newline.txt  freq_table.c
equihash/: CMakeLists.txt
equihash/include/equihash/: blake2b.h  equihash.h
equihash/src/: blake2b.cpp  equihash.cpp
equihash/tests/: test_equihash.cpp
set1ch2/c/: RUNME.sh  set1ch2.c  set1ch2_test_cases.txt
set1ch2/go/: set2ch1.go
set1ch2/rust/: Cargo.toml
set1ch2/rust/src/: main.rs
